{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 126,
  "lineage": "6ab1f16b-4fe4-b153-c40d-ca459d85f064",
  "resources": [
    {
      "module": "module.vault",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vault",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:vpc/vpc-068e9f8d29b3c62cc",
            "cidr_block": "172.37.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07abe63057e1c7c1f",
                "cidr_block": "172.37.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4ac69a31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-068e9f8d29b3c62cc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d8ea3b450e0d6f0c",
            "owner_id": "029094599989",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:029094599989:instance/i-049a464d0a9fe6c4e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049a464d0a9fe6c4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "n3twork-server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b44158f64368ef29",
            "private_dns": "ip-172-37-28-31.ec2.internal",
            "private_ip": "172.37.28.31",
            "public_dns": "ec2-35-175-186-238.compute-1.amazonaws.com",
            "public_ip": "35.175.186.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05689c0ecd1af1096",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ac94322be7189ee",
            "tags": {
              "Name": "vault-stage-bastion",
              "Project": "vault-stage"
            },
            "tags_all": {
              "Name": "vault-stage-bastion",
              "Project": "vault-stage"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0755050fa8fb3fa20"
            ]
          },
          "dependencies": [
            "module.vault.aws_security_group.bastion",
            "module.vault.data.aws_ssm_parameter.latest_ami",
            "module.vault.data.aws_subnet_ids.public",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:loadbalancer/app/vault-20210813231323339200000009/0c8bf890eb8a9c2a",
            "arn_suffix": "app/vault-20210813231323339200000009/0c8bf890eb8a9c2a",
            "dns_name": "vault-20210813231323339200000009-1049458251.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:029094599989:loadbalancer/app/vault-20210813231323339200000009/0c8bf890eb8a9c2a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vault-20210813231323339200000009",
            "name_prefix": "vault-",
            "security_groups": [
              "sg-09d3a7a44a0737793"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ac94322be7189ee"
              },
              {
                "subnet_id": "subnet-0a116dad9979b2776"
              }
            ],
            "subnets": [
              "subnet-07ac94322be7189ee",
              "subnet-0a116dad9979b2776"
            ],
            "tags": {
              "Name": "vault-stage-alb",
              "Project": "vault-stage"
            },
            "tags_all": {
              "Name": "vault-stage-alb",
              "Project": "vault-stage"
            },
            "vpc_id": "vpc-068e9f8d29b3c62cc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vault.aws_security_group.load_balancer",
            "module.vault.data.aws_subnet_ids.public",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_redirect",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:listener/app/vault-20210813231323339200000009/0c8bf890eb8a9c2a/4f8a054ec0ccd606",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029094599989:listener/app/vault-20210813231323339200000009/0c8bf890eb8a9c2a/4f8a054ec0ccd606",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:loadbalancer/app/vault-20210813231323339200000009/0c8bf890eb8a9c2a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_lb.alb",
            "module.vault.aws_security_group.load_balancer",
            "module.vault.data.aws_subnet_ids.public",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:listener/app/vault-20210813231323339200000009/0c8bf890eb8a9c2a/9edb9e07a71027a5",
            "certificate_arn": "arn:aws:acm:us-east-1:029094599989:certificate/fefbea18-98fc-42ce-8baf-acc9e26f2ff7",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:targetgroup/vault-20210813231320334200000006/67ee69178a705bc3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029094599989:listener/app/vault-20210813231323339200000009/0c8bf890eb8a9c2a/9edb9e07a71027a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:loadbalancer/app/vault-20210813231323339200000009/0c8bf890eb8a9c2a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-FS-2018-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_lb.alb",
            "module.vault.aws_lb_target_group.alb_targets",
            "module.vault.aws_security_group.load_balancer",
            "module.vault.data.aws_acm_certificate.vault_alb_cert",
            "module.vault.data.aws_subnet_ids.public",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_targets",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:targetgroup/vault-20210813231320334200000006/67ee69178a705bc3",
            "arn_suffix": "targetgroup/vault-20210813231320334200000006/67ee69178a705bc3",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/v1/sys/health",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029094599989:targetgroup/vault-20210813231320334200000006/67ee69178a705bc3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vault-20210813231320334200000006",
            "name_prefix": "vault-",
            "port": 8200,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "vault-stage-tg",
              "Project": "vault-stage"
            },
            "tags_all": {
              "Name": "vault-stage-tg",
              "Project": "vault-stage"
            },
            "target_type": "instance",
            "vpc_id": "vpc-068e9f8d29b3c62cc"
          },
          "dependencies": [
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:security-group/sg-0755050fa8fb3fa20",
            "description": "Firewall for the operator bastion instance",
            "egress": [],
            "id": "sg-0755050fa8fb3fa20",
            "ingress": [],
            "name": "vault-stage-bastion-sg20210813231320333300000004",
            "name_prefix": "vault-stage-bastion-sg",
            "owner_id": "029094599989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-stage-bastion-sg",
              "Project": "vault-stage"
            },
            "tags_all": {
              "Name": "vault-stage-bastion-sg",
              "Project": "vault-stage"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e9f8d29b3c62cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kms_endpoint",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:security-group/sg-0bd8397d9f76589d8",
            "description": "Firewall for the KMS Endpoint.",
            "egress": [],
            "id": "sg-0bd8397d9f76589d8",
            "ingress": [],
            "name": "vault-stage-kms-endpoint-sg20210813231320332700000002",
            "name_prefix": "vault-stage-kms-endpoint-sg",
            "owner_id": "029094599989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-stage-kms-endpoint-sg",
              "Project": "vault-stage"
            },
            "tags_all": {
              "Name": "vault-stage-kms-endpoint-sg",
              "Project": "vault-stage"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e9f8d29b3c62cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:security-group/sg-09d3a7a44a0737793",
            "description": "Firewall for the application load balancer fronting the vault instances.",
            "egress": [],
            "id": "sg-09d3a7a44a0737793",
            "ingress": [],
            "name": "vault-stage-alb-sg20210813231320332900000003",
            "name_prefix": "vault-stage-alb-sg",
            "owner_id": "029094599989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-stage-alb-sg",
              "Project": "vault-stage"
            },
            "tags_all": {
              "Name": "vault-stage-alb-sg",
              "Project": "vault-stage"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e9f8d29b3c62cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vault_instance",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:security-group/sg-020d747bd8163de7a",
            "description": "Firewall for the vault instances.",
            "egress": [],
            "id": "sg-020d747bd8163de7a",
            "ingress": [],
            "name": "vault-stage-vault-instance-sg20210813231320332500000001",
            "name_prefix": "vault-stage-vault-instance-sg",
            "owner_id": "029094599989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-stage-vault-instance-sg",
              "Project": "vault-stage"
            },
            "tags_all": {
              "Name": "vault-stage-vault-instance-sg",
              "Project": "vault-stage"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e9f8d29b3c62cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_allow_22",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH traffic.",
            "from_port": 22,
            "id": "sgrule-2525082061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0755050fa8fb3fa20",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.bastion",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_allow_outbound",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-2145349064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0755050fa8fb3fa20",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.bastion",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kms_allow_outbound",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-545767008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bd8397d9f76589d8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.kms_endpoint",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_allow_443",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS traffic.",
            "from_port": 443,
            "id": "sgrule-3733603509",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d3a7a44a0737793",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.load_balancer",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_allow_80",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic.",
            "from_port": 80,
            "id": "sgrule-3516525678",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d3a7a44a0737793",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.load_balancer",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_allow_outbound",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-2983245698",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09d3a7a44a0737793",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.load_balancer",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_22_bastion",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH traffic from vault bastion.",
            "from_port": 22,
            "id": "sgrule-2841508848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020d747bd8163de7a",
            "self": false,
            "source_security_group_id": "sg-0755050fa8fb3fa20",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.bastion",
            "module.vault.aws_security_group.vault_instance",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_443",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS traffic from vault instances.",
            "from_port": 443,
            "id": "sgrule-800349699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bd8397d9f76589d8",
            "self": false,
            "source_security_group_id": "sg-020d747bd8163de7a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.kms_endpoint",
            "module.vault.aws_security_group.vault_instance",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_80",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP traffic from vault instances.",
            "from_port": 80,
            "id": "sgrule-2325026488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bd8397d9f76589d8",
            "self": false,
            "source_security_group_id": "sg-020d747bd8163de7a",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.kms_endpoint",
            "module.vault.aws_security_group.vault_instance",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_8200",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from Load Balancer.",
            "from_port": 8200,
            "id": "sgrule-2721213233",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020d747bd8163de7a",
            "self": false,
            "source_security_group_id": "sg-09d3a7a44a0737793",
            "to_port": 8200,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.load_balancer",
            "module.vault.aws_security_group.vault_instance",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_8201",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from fellow vault instances that have this SG.",
            "from_port": 8201,
            "id": "sgrule-626440707",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020d747bd8163de7a",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8201,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.vault_instance",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_outbound",
      "provider": "module.vault.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-643165641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-020d747bd8163de7a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault.aws_security_group.vault_instance",
            "module.vault.data.aws_vpc.vault"
          ]
        }
      ]
    }
  ]
}